<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:background="@drawable/background"
     android:padding="16dp"
     android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/bloques_basicos" />

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:gravity="center_horizontal"
         android:orientation="horizontal">

        <Button
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:icon="@drawable/check_box_24px"
             style="?attr/materialButtonElevatedStyle"
             android:layout_weight="1"
             android:text="@string/casilla_de_verificacion"
             android:id="@+id/check_box" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/contenido_multimedia" />

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:gravity="center_horizontal"
         android:orientation="horizontal">

        <Button
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:icon="@drawable/outline_image"
             style="?attr/materialButtonElevatedStyle"
             android:layout_weight="1"
             android:id="@+id/ins_foto"
             android:text="@string/añadir_imagen" />

        <Space
             android:layout_height="wrap_content"
             android:layout_width="6dp" />

        <Button
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:icon="@drawable/outline_photo_camera"
             style="?attr/materialButtonElevatedStyle"
             android:layout_weight="1"
             android:text="@string/tomar_foto"
             android:id="@+id/ins_camara" />

    </LinearLayout>

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:gravity="center_horizontal"
         android:orientation="horizontal">

        <Button
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:icon="@drawable/round_mic"
             style="?attr/materialButtonElevatedStyle"
             android:layout_weight="1"
             android:text="@string/grabar_audio"
             android:id="@+id/ins_audio" />

        <Space
             android:layout_height="wrap_content"
             android:layout_width="6dp" />

        <Button
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:icon="@drawable/outline_gesture"
             style="?attr/materialButtonElevatedStyle"
             android:layout_weight="1"
             android:text="@string/dibujo"
             android:id="@+id/ins_dibujo" />

    </LinearLayout>

</LinearLayout>