<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:background="@drawable/background"
     android:padding="10dp"
     android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:textAppearance="?attr/textAppearanceTitleMedium"
         android:paddingBottom="10dp"
         android:text="@string/ordenar_notas_por" />

    <Button
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginBottom="8dp"
         app:icon="@drawable/round_history"
         style="?attr/materialButtonOutlinedStyle"
         android:id="@+id/fecha_de_modificacion"
         android:text="@string/fecha_de_modificacion" />

    <Button
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginBottom="8dp"
         app:icon="@drawable/calendar_today"
         style="?attr/materialButtonOutlinedStyle"
         android:id="@+id/fecha_de_creacion"
         android:text="@string/fecha_de_creacion" />

    <Button
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         app:icon="@drawable/sort_by_alpha"
         style="?attr/materialButtonOutlinedStyle"
         android:id="@+id/personalizado"
         android:text="@string/nombre" />

</LinearLayout>